# CodeGenLib

./: .gitignore  Cargo.toml  Readme.md  a.out  div.asm  test.c
examples/: HelloWorld.rs  add.rs  asm.rs  complex.rs  ir.rs  jit.rs  simple.rs
src/: arch.rs  asm.rs  error.rs  jit.rs  lib.rs  opt.rs  test.rs  x86.rs
src/abi/: linux.rs  mod.rs  windows.rs
src/arch/: AsmCall.rs  def.rs  ext.rs
src/arch/ext/: I80386.rs  I8086.rs  shared.rs  x64.rs
src/exec/: engine.rs  intepr.rs  mod.rs
src/ir/: ir_builder.rs  mod.rs  resolve.rs  safe.rs  typ.rs
src/jit/: macros.rs  typed.rs
src/opt/: optimize.rs
src/x86/: asm.rs  builder.rs  function.rs  mem.rs  mod.rs  prog.rs  staticv.rs  var.rs
tests/: abi.rs  function.rs  ir_builder.rs  jit.rs
tmp/: add.c  simple.c
