[package]
name = "CodeGenLib"
version = "0.0.1"
edition = "2021"
description = "A libary to generate AMD64 machine code (like LLVM)"
reposentory = "https://github.com/Toni-Graphics/CodeGenLib"
keywords = ["codegen", "AMD64", "x64", "compiler"]
documentation = "https://docs.rs/CodeGenLib/latest/CodeGenLib/"
categories = ["development-tools::ffi"] 
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.34.0", features = ["all"] }

[features]
default = ["all"]
jit = []
all = ["default", "jit"]
