[package]
name = "CodeGenLib"
version = "0.0.1"
edition = "2021"
description = "A libary to build compilers (like LLVM/Cranelift)"
reposentory = "https://github.com/Toni-Graphics/CodeGenLib"
keywords = ["codegen", "x86-64Bit", "x64", "compiler"]
documentation = "https://docs.rs/CodeGenLib/latest/CodeGenLib/"
categories = ["development-tools::ffi"] 
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formatic =  { path = "../formatic/" }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
