[package]
name = "CodeGenLib"
version = "1.0.0"
edition = "2021"
description = "A libary to build compilers (like LLVM/Cranelift)"
reposentory = "https://github.com/Toni-Graphics/CodeGenLib"
keywords = ["codegen", "x86-64Bit", "x64", "compiler"]
documentation = "https://docs.rs/CodeGenLib/latest/CodeGenLib/"
categories = ["development-tools::ffi"] 
license = "MPL-2.0"

[lib]
doctest = false

[workspace]
resolver = '2'
members = [
  ".",
  "crates/Formatic",
]

[dependencies]
formatic = { workspace = true }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }

[workspace.dependencies]
formatic = { path = "crates/Formatic" }
